<resources>
    <string name="app_name">Madproject</string>
    <string name="rsalary_teacherID">Enter Teacher Name</string>
    <string name="rsalary_Teacher_sal">Enter Teacher Salary</string>
    <string name="rsalarycompanypayment">Company Payment</string>
    <string name="rsalaryteacher_netsal">Teacher Net Salary</string>
    <string name="rschedule_btn_intro">Manage Class</string>
    <string name="err_classId">Enter valid Class ID</string>
    <string name="err_teachername">Enter valid Name</string>
    <string name="err_classday">Enter valid day</string>
    <string name="err_duration">Enter valid range 1 to 10</string>
    <string name="err_startingtime">Enter valid time</string>
    <string name="err_teachersal">Enter value > 5000</string>
    <string name="errteacherid">Enter valid teacher name</string>
    <string name="errcompanyprofit">Enter valid Comapnyprofit</string>
    <string name="errnetsalary">Enter valid net salary</string>


    <string name="dashboard_title">Nilwala Education</string>
    <string name="rbtn_1">OK</string>
    <string name="rbtn_2">Clear</string>
    <string name="rpbtn_1">Add</string>
    <string name="rpbtn_2">View</string>
    <string name="rpbtn_3">Update</string>
    <string name="rpbtn_4">Delete</string>
    <string name="rpbtn_5">Back</string>
    <string name="rschedule_classID">Enter Class ID</string>
    <string name="rschedule_teachername">Enter Teacher Name</string>
    <string name="rschedule_classday">Enter Class Day</string>
    <string name="rschedule_duration">Enter duration(Hrs)</string>
    <string name="rschedule_starttime">Enter Starting Time</string>
    <string name="title_classManagemet">Nilwala Education</string>
    <string name="dashboardhall">Hall Management</string>
    <string name="emp_title">Teacher Salary Management System</string>
    <string name="btn_kbutton1">Add Teacher / Employee</string>
    <string name="btn_kbutton2">View Teaachers / Employees</string>
    <string name="btn_kback">Back</string>
    <string name="btn_kview">View Teachers / Employees</string>
    <string name="btn_kview1">View Teachers / Employees</string>
    <string name="pt_email1">Email</string>
    <string name="btn_klogin">Login</string>
    <string name="btn_ksignUp">Sign Up</string>
    <string name="btn_kregister">Register</string>
    <string name="pt_kfname">First Name</string>
    <string name="pt_kllname" />
    <string name="pt_kemail2">Email;</string>
    <string name="pt_kpwd3">Password</string>
    <string name="pt_kcompwd2">Confirm Password</string>
    <string name="btn_kcancel1">Cancel</string>
    <string name="pt_kFullName">Full Name</string>
    <string name="ph_num">Enter Number</string>
    <string name="pt_mobNum">Enter Number</string>
    <string name="pt_ksubject">Enter Subject</string>
    <string name="pt_kidcard">Enter Number</string>
    <string name="pt_kaddress">Enter Address</string>
    <string name="btn_ksubmit">Submit</string>
    <string name="btn_kback2">Back</string>


    <string name="c_stu_topic">Student Management</string>
    <string name="c_stu_addbutton">ADD STUDENT</string>
    <string name="c_stu_edittext">Edit STUDENT</string>
    <string name="c_stu_viewbutton">VIEW STUDENT</string>
    <string name="c_stu_fname">First Name</string>
    <string name="c_stu_lname">Last Name</string>
    <string name="c_stu_gender">Gender</string>
    <string name="c_stu_address">Address</string>
    <string name="c_stu_number">Phone Number</string>
    <string name="c_stu_paren_number">Parent/Guardian Number</string>
    <string name="c_stu_submitbutton">Submit</string>
    <string name="c_stu_edittbutton">Edit</string>
    <string name="c_stu_deletebutton">DELETE STUDENT</string>
    <string name="c_stu_search">Search the Student name</string>
    <string name="c_stu_search2">Search</string>
    <string name="c_stu_delete2">DELETE</string>
    <string name="c_stu_viewandDelete">Student Details</string>
    <string name="c_stu_profile">STUDENT PROFILE</string>
    <string name="c_static_aboutus">ABOUT US</string>
    <string name="c_about_mission">Our Mission</string>
    <string name="c_about_vision">Our Vision</string>
    <string name="c_about_vision_paragraph">Our vision at Nilwala Education is to empower students
        acquire, demonstrate, articulateand value knowledge and skills that will support them, as
        to life-long learners, to participatein and contribute to the global world and practise the
        core values of the insititute: respect,tolerance and inclusion, and excellence.</string>
    <string name="c_about_mission_paragraph">Is to enable all learners access to learning through
        the provision of differentiated, in-depthand cohesive learning programs aligned to year level
        content and achievement standards informed by the Local curriculum highly effective teachers,
        focussed on improving student outcomes, through their commitment to ongoing professional
        development, quality teaching, evidence based practices, coaching and mentoring and
        collaboration a quality inclusive learning environment that is responsive to student voice
        enriching, engaging resources opportunities for community and parents to participate in
        learning and decision making partnerships</string>
    <string name="c_stu_Update">Edit</string>

    <string name="N_H_hid">enter hall id</string>
    <string name="N_H_hadd">Add Hall</string>
    <string name="N_H_hcapacity">capacity</string>
    <string name="N_H_hmanager">enter manager name</string>
    <string name="N_H_hteacher">enter teacher name</string>
    <string name="N_H_hrac">A/C</string>
    <string name="N_H_hrnonac">Non A/C</string>
    <string name="N_H_haddhall">ADD HALL</string>
    <string name="N_H_hviewhall">VIEW HALL DETAILS</string>
    <string name="N_H_havailableteacher">AVAILABLE TEACHER</string>
    <string name="N_H_hlogin">LOGIN</string>
    <string name="N_H_hsignup">SIGNUP</string>
    <string name="N_H_hhviewid">"    MBN 045"</string>
    <string name="H_N_hhviewcapacity">"    1200"</string>
    <string name="N_H_hhview">"    A/C"</string>
    <string name="N_H_hhviewmanager">"    M.D Perera"</string>
    <string name="N_H_hhviewteacher">"        K.Gayan / H.Kanishka"</string>
    <string name="N_H_hhupdate">UPDATE</string>
    <string name="N_H_hhdelete">DELETE</string>
    <string name="N_H_hd1">"     MBN 045"</string>
    <string name="N_H_hd2">"    GBN 022"</string>
    <string name="N_H_hd3">"    JBN 003"</string>
    <string name="N_H_hd4">"    RBN 012"</string>
    <string name="N_H_hd5">"    MBN 006"</string>
    <string name="N_H_hdhallnumber">"    5"</string>
    <string name="N_H_ht1">"    MBN 045"</string>
    <string name="N_H_ht2">"    GBN 022"</string>
    <string name="N_H_ht3">"    JBN 003"</string>
    <string name="N_H_ht4">"    RBN 012"</string>
    <string name="N_H_ht5">"    MBN 006"</string>
    <string name="N_H_htviewid">"    MBN 045"</string>
    <string name="N_H_htviewteacher">"    K.Gayan / H.Kanishka"</string>
    <string name="rschedule_btn_classfee">Class Fee</string>
    <string name="title_activity_edit_student">EditStudent</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_student_fee">StudentFee</string>
    <string name="invalid_name">Please Enter Valid Hall ID</string>
</resources>


