<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b7"
    tools:context=".Hall_View_DE">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="61dp"
        android:background="@color/design_default_color_primary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="252dp"
            android:layout_height="35dp"
            android:text="MBN 045"
            android:textColor="#FDFCFC"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="44dp"
            android:layout_height="42dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.736"
            app:srcCompat="@drawable/backarrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button9"
        android:layout_width="189dp"
        android:layout_height="56dp"
        android:text="@string/N_H_hhupdate"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <Button
        android:id="@+id/button12"
        android:layout_width="189dp"
        android:layout_height="56dp"
        android:text="@string/N_H_hhdelete"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="278dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/H_N_hhviewcapacity"
        android:inputType="textPersonName"
        android:text="    1200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="278dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/N_H_hhviewid"
        android:inputType="textPersonName"
        android:text="    MBN 045"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.253" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="278dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/N_H_hhview"
        android:inputType="textPersonName"
        android:text="    A/C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.408" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="278dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/N_H_hhviewmanager"
        android:inputType="textPersonName"
        android:text="    M.D Perera"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.481" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="278dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/N_H_hhviewteacher"
        android:inputType="textPersonName"
        android:text="    K.Gayan / H.Kanishka"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>